# dbt-burla

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  integration.yml  release.yml
docs/: configuration.md  how-it-works.md  index.md  quickstart.md  troubleshooting.md
docs/assets/: landing.css
docs/warehouses/: bigquery.md  duckdb.md  snowflake.md
examples/: README.md
examples/01-quickstart-duckdb/: README.md  dbt_project.yml  profiles.yml
examples/01-quickstart-duckdb/models/: enriched_orders.py  order_summary.sql  stg_orders.sql
examples/02-snowflake-ml-scoring/: README.md  dbt_project.yml  profiles.example.yml
examples/02-snowflake-ml-scoring/models/: _sources.yml  scored_customers.py  stg_customers.sql
examples/03-bigquery-llm-enrichment/: README.md  dbt_project.yml  profiles.example.yml
examples/03-bigquery-llm-enrichment/models/: _sources.yml  categorized_tickets.py  stg_support_tickets.sql
examples/04-fan-out-heavy-compute/: README.md  dbt_project.yml  profiles.yml
examples/04-fan-out-heavy-compute/models/: computed_features.py  stg_inputs.sql
src/dbt/adapters/burla/: __init__.py  config.py  credentials.py  errors.py  python_submissions.py
src/dbt/adapters/burla/warehouses/: __init__.py  base.py  bigquery.py  duckdb.py  snowflake.py
src/dbt/adapters/burla_bigquery/: __init__.py  __version__.py  connections.py  credentials.py  impl.py
src/dbt/adapters/burla_duckdb/: __init__.py  connections.py  credentials.py  impl.py
src/dbt/adapters/burla_snowflake/: __init__.py  connections.py  credentials.py  impl.py
src/dbt/include/burla_bigquery/: dbt_project.yml
src/dbt/include/burla_bigquery/macros/: adapters.sql  catalog.sql
src/dbt/include/burla_duckdb/: dbt_project.yml
src/dbt/include/burla_duckdb/macros/: adapters.sql  catalog.sql  materialization_table.sql
src/dbt/include/burla_snowflake/: dbt_project.yml
src/dbt/include/burla_snowflake/macros/: adapters.sql  catalog.sql
tests/integration/: conftest.py  test_bigquery_e2e.py  test_duckdb_e2e.py  test_snowflake_e2e.py
tests/integration/projects/duckdb_basic/: dbt_project.yml
tests/integration/projects/duckdb_basic/models/: enriched_orders.py  order_summary.sql  schema.yml  stg_orders.sql
tests/unit/: conftest.py  test_config.py  test_credentials_helper.py  test_duckdb_backend.py  test_errors.py  test_execute_user_model.py  test_extract_relation_maps.py  test_python_job_helper.py  test_relation_ref.py  test_warehouses_registry.py
website/: astro.config.mjs  package-lock.json  package.json
website/src/components/: Architecture.astro  Footer.astro  Icon.astro  Nav.astro  Sidebar.astro  Toc.astro
website/src/layouts/: BaseLayout.astro  DocsLayout.astro
website/src/pages/: 404.astro  index.astro
website/src/pages/docs/: configuration.astro  how-it-works.astro  index.astro  quickstart.astro  troubleshooting.astro
website/src/pages/examples/: bigquery-llm-enrichment.astro  heavy-compute-fanout.astro  index.astro  quickstart-duckdb.astro  snowflake-ml-scoring.astro
website/src/pages/warehouses/: bigquery.astro  duckdb.astro  snowflake.astro
website/src/styles/: custom.css  docs.css  global.css  landing.css
website/src/utils/: url.ts
